# nuxbe-printer-bridge

./: .gitignore  .mcp.json  Cargo.toml  Cross.toml  Dockerfile.aarch64-musl  install.sh  readme.md  requests.http
.github/workflows/: build-deb.yml  debian.yml  release.yml
debian/: changelog  control  install  postinst  rules  rust-spooler.service
repo-setup/: README.md
repo-setup/nginx/: debian-repo.conf
repo-setup/scripts/: build-deb.sh  deploy-vps.sh  generate-gpg-key.sh  init-vps.sh  setup-repo.sh  update-repo.sh
src/: cli.rs  config.rs  error.rs  main.rs  models.rs  server.rs
src/api/: admin.rs  mod.rs  routes.rs
src/models/: api.rs
src/services/: mod.rs  print_job.rs  printer.rs  printer_sync.rs  websocket.rs
src/tests/: api_routes_test.rs  config_test.rs  integration_test.rs  mod.rs  print_job_service_test.rs  printer_service_test.rs
src/utils/: admin_interface.html  admin_interface.rs  config.rs  http.rs  mod.rs  printer_storage.rs  tui.rs
