[package]
name = "rust-spooler"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
futures = "0.3"
local-ip-address = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tempfile = "3.19"
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
reverb_rs = { git = "https://github.com/Team-Nifty-GmbH/reverb_rs", branch = "main" }
async-trait = "0.1.86"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }