[package]
name = "nuxbe-printer-bridge"
version = "0.1.14"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.25", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tempfile = "3.23.0"
dirs = "6.0.0"
clap = { version = "4.5.53", features = ["derive"] }
cursive = { version = "0.21.1", default-features = false, features = ["crossterm-backend"] }
reverb-rs = { git = "https://github.com/Team-Nifty-GmbH/reverb_rs", branch = "main" }
async-trait = "0.1.89"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "std"] }
openssl-sys = { version = "0.9.111", features = ["vendored"] }
printers = "2.2.1"
tracing = "0.1.43"
urlencoding = "2.1.3"
tokio-util = "0.7.17"

[features]
default = []
vendored-openssl = ["openssl-sys/vendored"]
